Fix: modal close button too large

--- a/css/frontend-common.css
+++ b/css/frontend-common.css
@@ -17,22 +17,16 @@
    --kompassi-box-shadow: 0 0 3px rgba(0,0,0,0.1);
    --kompassi-box-shadow-hover: 0 0 3px rgba(0,0,0,0.4);
    --kompassi-radius: 0.3em;
+   --kompassi-padding: 0.6em;
+   --kompassi-padding-large: 1.5em;
 
    /*  Button groups  */
    --kompassi-button-separator: rgba(0,0,0,0.1);
-   --kompassi-button-padding: 0.6em;
    --kompassi-button-icon-size: 21px;
 
    /*  Modals  */
    --kompassi-modal-max-width: 1000px;
    --kompassi-modal-bg: hsl(var(--kompassi-hue), 10%, 95%);
-   --kompassi-modal-padding: 1em;
-}
-
-@media screen and (min-width:900px) and (min-height:600px) {
-   :root {
-      --kompassi-modal-padding: 1.5em;
-   }
 }
 
 [class*="wp-block-kompassi"], #kompassi_modal {
@@ -88,7 +82,7 @@
  .indicator:not(:empty) {
     display: inline-block;
     float: right;
-    margin-left: var(--kompassi-button-padding);
+    margin-left: var(--kompassi-padding);
     width: var(--kompassi-button-icon-size);
     height: var(--kompassi-button-icon-size);
     color: var(--kompassi-fg-indicator);
@@ -142,24 +136,24 @@
 		cursor: pointer;
 		position: relative;
 		display: inline-block;
-		padding: var(--kompassi-button-padding);
+		padding: var(--kompassi-padding);
       color: var(--kompassi-fg) !important;
 		background: var(--kompassi-bg);
 		border-radius: var(--kompassi-radius);
-		margin-right: var(--kompassi-button-padding);
-		margin-bottom: var(--kompassi-button-padding);
+		margin-right: var(--kompassi-padding);
+		margin-bottom: var(--kompassi-padding);
 		box-shadow: var(--kompassi-box-shadow);
       text-decoration: none;
    }
 		.kompassi-button-group.has-icon-and-label > a:is([class*="kompassi-icon"]) {
-			padding-left: calc( ( var(--kompassi-button-padding) * 2 ) + var(--kompassi-button-icon-size) );
+			padding-left: calc( ( var(--kompassi-padding) * 2 ) + var(--kompassi-button-icon-size) );
 		}
 			.kompassi-button-group:is(.has-icon-and-label, .has-icon-only) > a::before {
 				content: '';
 				display: inline-block;
 				position: absolute;
-				top: var(--kompassi-button-padding);
-				left: var(--kompassi-button-padding);
+				top: var(--kompassi-padding);
+				left: var(--kompassi-padding);
 				width: var(--kompassi-button-icon-size);
 				height: var(--kompassi-button-icon-size);
 				background-repeat: no-repeat;
@@ -168,8 +162,8 @@
 				opacity: 0.5;
 			}
 			.kompassi-button-group.has-icon-only > a {
-				width: calc( var(--kompassi-button-icon-size) + var(--kompassi-button-padding) * 2 );
-				height: calc( var(--kompassi-button-icon-size) + var(--kompassi-button-padding) * 2 );
+				width: calc( var(--kompassi-button-icon-size) + var(--kompassi-padding) * 2 );
+				height: calc( var(--kompassi-button-icon-size) + var(--kompassi-padding) * 2 );
             user-select: none;
 			}
 
@@ -180,8 +174,8 @@
 
 @container kompassi-integration (min-width: 0px) {
 	.kompassi-button-group {
-		margin-right: var(--kompassi-button-padding);
-		margin-bottom: var(--kompassi-button-padding);
+		margin-right: var(--kompassi-padding);
+		margin-bottom: var(--kompassi-padding);
 	}
 		.kompassi-button-group > a {
 			border-radius: 0;
@@ -230,15 +224,15 @@
          position: relative;
          user-select: none;
 
-         width: calc( var(--kompassi-button-icon-size) + var(--kompassi-button-padding) * 2 );
-         height: calc( var(--kompassi-button-icon-size) + var(--kompassi-button-padding) * 2 );
+         width: calc( var(--kompassi-button-icon-size) + var(--kompassi-padding) * 2 );
+         height: calc( var(--kompassi-button-icon-size) + var(--kompassi-padding) * 2 );
       }
          .kompassi-dropdown-menu > a::before {
             content: '';
             display: inline-block;
             position: absolute;
-            top: var(--kompassi-button-padding);
-            left: var(--kompassi-button-padding);
+            top: var(--kompassi-padding);
+            left: var(--kompassi-padding);
             width: var(--kompassi-button-icon-size);
             height: var(--kompassi-button-icon-size);
             background-repeat: no-repeat;
@@ -256,7 +250,7 @@
          }
          .kompassi-dropdown-menu-items a {
             display: block;
-            padding: var(--kompassi-button-padding);
+            padding: var(--kompassi-padding);
             color: var(--kompassi-fg);
             text-decoration: none;
          }
@@ -306,8 +300,8 @@
 		display: grid;
 		grid-template-columns: auto max-content;
 		grid-template-areas: 'title actions';
-		grid-gap: var(--kompassi-modal-padding);
-		padding: var(--kompassi-modal-padding);
+		grid-gap: var(--kompassi-padding-large);
+		padding: var(--kompassi-padding-large);
 		background-color: #fff;
 	}
 		#kompassi_modal .header .title {
@@ -322,8 +316,8 @@
 			bottom: 0;
 			cursor: pointer;
 			display: block;
-			width: 4.75em;
-			padding: 0 var(--kompassi-modal-padding);
+			width: var(--kompassi-button-icon-size);
+			padding: 0 var(--kompassi-padding-large);
 		}
 			#kompassi_modal .header .close::before {
 				display: inline-block;
@@ -338,7 +332,7 @@
 
 		#kompassi_modal .content .actions {
 			background-color: hsl(var(--kompassi-hue), 25%, 85%);
-			padding: calc( var(--kompassi-modal-padding) / 2 ) var(--kompassi-modal-padding);
+         padding: var(--kompassi-padding) var(--kompassi-padding-large);
 			margin-right: 0;
          margin-bottom: 0;
 		}
@@ -367,7 +361,7 @@
 				}
       #kompassi_modal .content .main,
 		#kompassi_modal .content .meta {
-         padding: var(--kompassi-modal-padding);
+         padding: var(--kompassi-padding-large);
       }
 
 @media screen and (max-width:599px) {
